--- a/src/App/Layout/Informasi/StyleInformasi.css
+++ b/src/App/Layout/Informasi/StyleInformasi.css
@@ -55,3 +55,23 @@
     bottom: 16%;
     background: #FDCE3F;
 }
+
+#KontenGambar {
+    position :relative;
+    width : 640px;
+    height : 360px;
+    display : block;
+    margin-left: auto;
+    margin-right: auto;
+    top : 4.74%;
+}
+
+#KeteranganGambar {
+    position : absolute;
+    width : 960px;
+    height : 180px;
+    background : #fdce3f;
+    top : 49.64%;
+    margin-left: auto;
+    margin-right: auto;
+}
