--- a/src/App/Layout/Peta/StylePeta.css
+++ b/src/App/Layout/Peta/StylePeta.css
@@ -53,3 +53,46 @@
     top : 49.64%;
     left: 25%;
 }
+
+.centerImage{
+    display:block;
+    margin-left:auto;
+    margin-right:auto;
+}
+
+.NamaRuang{  
+    font-family: Helvetica Neue;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 31.5px;
+    line-height: 39px;
+    height: 39;
+    width : 507px;
+    color: #000000;
+    margin-top: 30px;
+    margin-bottom:auto;
+    margin-left:30px;
+}
+
+.TextKetRuang {
+    height: 84px;
+    margin-left:30px;
+    margin-bottom:27px;
+    margin-top: auto;
+}
+
+.GambarRuang {
+    position :relative;
+    width : 640px;
+    height : 360px;
+}
+
+.FontTextRuang{
+    font-family: Helvetica Neue;
+    font-style: normal;
+    font-size: 22px;
+    line-height: 27px;
+    color: #000000;
+    width: 507px;
+    
+}
