--- a/src/App/Layout/Style.css
+++ b/src/App/Layout/Style.css
@@ -60,8 +60,9 @@ border-radius: 48px 0px 0px 48px;
 }
 
 .ProgressBar {
-  padding-top: 4px;  
-  height : 100px;
+  padding-top: 0px; 
+  width: 288px; 
+  
   }
 
 .Button {
